__tests__/cmds/__snapshots__/validate.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rdme validate error handling should throw an error if an in valid Swagger definition is supplied 1`] = `
[SyntaxError: Swagger schema validation failed.

ADDITIONAL PROPERTY must NOT have additional properties

  23 |         "description": "Find out more",
  24 |         "url": "http://swagger.io",
> 25 |         "this-shouldnt-be-here": true
     |         ^^^^^^^^^^^^^^^^^^^^^^^ 😲  this-shouldnt-be-here is not expected to be here!
  26 |       }
  27 |     }
  28 |   ],]
`;

exports[`rdme validate error handling should throw an error if an invalid OpenAPI 3.1 definition is supplied 1`] = `
[SyntaxError: OpenAPI schema validation failed.

REQUIRED must have required property 'name'

  24 |   "components": {
  25 |     "securitySchemes": {
> 26 |       "tlsAuth": {
     |                  ^ ☹️  name is missing here!
  27 |         "type": "mutualTLS"
  28 |       }
  29 |     }]
`;
